--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,19 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" property="og:title" content="Todo App" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/50907730382_38ab4d2635_b.jpg"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      property="og:description"
+      content="This is Todo app that can be used to record all the tasks a user has to complete in the future. This app can store your tasks in the local storage and can retrive it on any day."
     />
+    <meta name="author" content="Amol Shrivastava" />
     <link
       rel="icon"
       type="image/png"
@@ -34,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Frontend Mentor | Todo app</title>
+    <title>Todo app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
